--- a/02.Landing-Page/index.html
+++ b/02.Landing-Page/index.html
@@ -24,8 +24,13 @@
 
         <div class="header-bottom">
             <div class="header-bottom-left">
-                <h1>AI Driven</h1>
-                <p>Para-AI is the next level sollutions for your problems.</p>
+                <h1>AI Driven Sollutions</h1>
+                <p>Para-AI is the next level sollutions for your problems. It will solve your problems in easy way. 
+                    Our engineers are best int the world. We are the best company in the world. Our commitment is to be a trusted 
+                    partner in their journey, enabling them to unlock their 
+                    full potential and lead with clarity in a rapidly changing 
+                    world. At Para-AI, we prioritize success, intelligence, and 
+                    seamless integration.</p>
                 <button>Sign Up</button>
             </div>
             <div class="header-bottom-right">
@@ -56,7 +61,7 @@
             </div>
         </div>
 
-        <div>
+        <div class="container-center">
             <p>At Para-AI, our mission is to transform the way businesses
                 harness the power of artificial intelligence. We don't just 
                 develop AI solutions; we craft intelligent systems that 
@@ -72,10 +77,10 @@
             <span>-CEO, Para-AI</span>    
         </div>
 
-        <div>
+        <div class="container-footer">
             <div>
-                `<h5>Call to action! It's time!</h5>
-                <p></p>
+                <h3>Call to action! It's time!</h3>
+                <p>Sign Up for our product by clicking that button over there!</p>
             </div>
             <button>Sign UP</button>
         </div>
